[project]
name = "pytorch-questdb-pipeline"
version = "0.1.0"
description = "Tutorial: Loading QuestDB time-series data into PyTorch"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "torch>=2.0.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
fast = [
    "connectorx>=0.3.0",  # Faster queries via PostgreSQL protocol
]

[tool.poe.tasks]
method1 = { cmd = "python steps/method1_direct_query.py", help = "Demo: Direct SQL queries" }
method2 = { cmd = "python steps/method2_parquet_export.py", help = "Demo: Parquet export via API" }
method3 = { cmd = "python steps/method3_parquet_partitions.py", help = "Demo: Direct partition access" }
train   = { cmd = "python steps/train.py", help = "Train the LSTM model" }
all     = ["method1", "method2", "train"]
